Revert "187 – Fix, - BUCKET live value not updated"
This reverts commit a9ca82a8e90a87c3242c86e57bc77efc989cce38.